--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,7 @@ body {
       &.active {
         font-weight: 700;
         background-color: #a50505;
+        color: #fff
       }
 
       &.muted {
@@ -108,6 +109,7 @@ body {
       &.start, &.end {
         background-color: #a50505;
         color: #fff;
+        font-weight: 400;
       }
 
       &.between:nth-child(7n):after, &.start:nth-child(7n):after {
