Исправлена логика работы кнопки сброс

--- a/src/App.scss
+++ b/src/App.scss
@@ -174,7 +174,7 @@ body {
   color: #ac0404;
 }
 
-.today-button {
+.classic-button {
   margin-top: 10px;
   padding: 8px 12px;
   background-color: #ac0404;
