--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+// App.scss
 $primary: rgba(183, 0, 55, 0.80);
 $radius: 12px;
 
@@ -33,4 +34,9 @@ body {
 
 .muted {
   color: #ac0404;
+}
+
+.disabled {
+  color: #ccc;
+  pointer-events: none;
 }
